@@ -54,6 +54,7 @@ v 8.3.0 (unreleased)
   - Suppress warning about missing `.gitlab-ci.yml` if builds are disabled
   - Do not show build status unless builds are enabled and `.gitlab-ci.yml` is present
   - Persist runners registration token in database
+  - Fix online editor should not remove newlines at the end of the file
 
 v 8.2.3
   - Fix application settings cache not expiring after changes (Stan Hu)
